--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-slinger",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -8,7 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "phaser": "^3.90.0"
+    "three": "^0.172.0",
+    "@tweenjs/tween.js": "^25.0.0"
   },
   "devDependencies": {
     "vite": "^6.3.0"
